# hacli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
scripts/: install.sh
src/: client.rs  config.rs  error.rs  main.rs  output.rs  parse.rs
src/commands/: api.rs  calendar.rs  check_config.rs  config_cmd.rs  events.rs  history.rs  logbook.rs  mod.rs  services.rs  states.rs  template.rs
